crates/connectors/ndc-citus/tests/snapshots/query_tests__predicates__select_where_variable_int.snap
---
source: crates/connectors/ndc-citus/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "AlbumId": 35,
        "Title": "Garage Inc. (Disc 1)"
      }
    ]
  },
  {
    "rows": [
      {
        "AlbumId": 222,
        "Title": "Serie Sem Limite (Disc 1)"
      }
    ]
  }
]
